# tolk-molasses

./: .gitignore  CMakeLists.txt  README.md
docs/: LEGAL.md
examples/c/: CMakeLists.txt  ConsoleApp.c
src/: Makefile  ScreenReaderDriverSAPI.cpp  ScreenReaderDriverSNova.cpp  Tolk.cpp  Tolk.h
